# OBS-plugin-overworlf_api

./: .gitignore  CLAUDE.md  CMakeLists.txt  riot.txt
.claude/skills/obs-plugins/: .skillfish.json  SKILL.md
.claude/skills/obs-plugins/references/: plugins.md
.claude/skills/obs-plugins/scripts/: plugins.py
.github/workflows/: pr-pull.yaml  push.yaml
companion/: package.json
companion/src/: gep-service.js  main.js  preload.js  simulator.js  ui.html  valorant-normalizer.js  ws-forwarder.js
companion/test/: harness.js
data/locale/: en-US.ini
docs/: CONTINUATION.md  REVIEW-FINDINGS.md
docs/research/: 01-ow-electron-gep-api.md  02-gep-games-event-schemas.md  03-obs-frontend-api.md  04-obs-plugin-engineering.md  05-market-research.md  06-twitch-youtube-platforms.md  07-valorant-event-taxonomy.md  08-gap-analysis-critic.md  README.md
src/: gp-clocks.h  gp-core.cpp  gp-core.h  gp-dock.cpp  gp-dock.hpp  gp-journal.cpp  gp-journal.h  gp-overlay-source.cpp  gp-protocol.cpp  gp-protocol.h  gp-rules.cpp  gp-rules.h  gp-sha1.h  gp-taxonomy.cpp  gp-taxonomy.h  gp-twitch.cpp  gp-twitch.h  gp-types.h  gp-ws-server.cpp  gp-ws-server.h  plugin-main.cpp
